# Cosmos

./: Cosmos.sln
Cosmos/: CMakeLists.txt  Cosmos.vcxproj  Cosmos.vcxproj.filters  main.cpp
Cosmos/core/: combat_system.cpp  combat_system.h  game_actions.cpp  game_actions.h  game_objects.cpp  game_objects.h  game_world.cpp  game_world.h
Cosmos/data/: actions1.txt  actions3.txt  effects.txt  game_config.txt  monsters.txt  player_stats.txt  results3.txt  room1.txt  room3.txt  room4.txt  weapons.txt
Cosmos/ui/: console_ui.cpp  console_ui.h
Debug/data/: actions2.txt  actions3.txt  actions4.txt  effects.txt  monsters.txt  results1.txt  results2.txt  results3.txt  results4.txt  room2.txt
